--- a/assets/css/Result.css
+++ b/assets/css/Result.css
@@ -96,3 +96,9 @@ body {
   background-color: #0b91d1;
   transform: scale(1.05);
 }
+.airline-logo {
+  width: 50px;
+  height: auto;
+  object-fit: contain;
+  border-radius: 4px;
+}
